--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 /.pnp
 .pnp.js
 
-./idea
-./idea/*
+package-lock.json
 
 # testing
 /coverage
@@ -20,6 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.idea/
 
 npm-debug.log*
 yarn-debug.log*
