--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "aws-sdk": "^2.503.0",
     "axios": "^0.19.0",
+    "history": "^4.9.0",
     "react": "^16.8.6",
+    "react-cookies": "^0.1.1",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
