--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.2"
   },
