--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.3.1",
     "aws-sdk": "^2.503.0",
     "axios": "^0.19.0",
     "history": "^4.9.0",
