--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.503.0",
     "axios": "^0.19.0",
     "history": "^4.9.0",
+    "query-string": "^6.8.2",
     "react": "^16.8.6",
     "react-cookies": "^0.1.1",
     "react-dom": "^16.8.6",
