--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,19 @@
 {
-  "short_name": "React App",
+  "short_name": "Are You ?",
   "name": "Are You ?",
   "icons": [
     {
-      "src": "/icon2.png",
-      "sizes": "512x512 192x192 64x64 32x32 24x24 16x16",
+      "src": "icon2.png",
+      "sizes": "192x192",
+      "type": "image/x-icon"
+    },
+    {
+      "src": "icon2.png",
+      "sizes": "512x512",
       "type": "image/x-icon"
     }
   ],
-  "start_url": "/",
+  "start_url": "./index.html",
   "display": "standalone",
   "theme_color": "#09198A",
   "background_color": "#ffffff"
