--- a/public/manifest.json
+++ b/public/manifest.json
@@ -28,7 +28,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#09198A",
   "background_color": "#ffffff"
